--- a/.dockerignore
+++ b/.dockerignore
@@ -31,3 +31,21 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+
+# === Additions for containerization ===
+
+# Git
+.git
+.gitignore
+
+# Logs
+logs/
+*.log
+
+# IDE
+.vscode/
+.idea/
+
+# Caches
+.pytest_cache/
+pip-cache/
