--- a/deploy/vllm_load_balancer.conf
+++ b/deploy/vllm_load_balancer.conf
@@ -1,6 +1,6 @@
 upstream vllm_backend {
     # Round-robin load balancing
-    server 127.0.0.1:50002;    server 127.0.0.1:50003;    server 127.0.0.1:50004;    server 127.0.0.1:50005;    server 127.0.0.1:50006;    server 127.0.0.1:50007;    server 127.0.0.1:50008;    server 127.0.0.1:50009;
+    server 127.0.0.1:51000;    server 127.0.0.1:51001;    server 127.0.0.1:51002;    server 127.0.0.1:51003;    server 127.0.0.1:51004;    server 127.0.0.1:51005;    server 127.0.0.1:51006;    server 127.0.0.1:51007;
 }
 
 server {
@@ -27,5 +27,10 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
+        # WebSocket support
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
     }
 }
