--- a/deploy/vllm_load_balancer.conf
+++ b/deploy/vllm_load_balancer.conf
@@ -1,11 +1,12 @@
 upstream vllm_backend {
     # Round-robin load balancing
-    server 127.0.0.1:51000;    server 127.0.0.1:51001;    server 127.0.0.1:51002;    server 127.0.0.1:51003;    server 127.0.0.1:51004;    server 127.0.0.1:51005;    server 127.0.0.1:51006;    server 127.0.0.1:51007;
+    server 127.0.0.1:52000;
+    server 127.0.0.1:52001;
 }
 
 server {
-    # Listen on port 443 for HTTPS traffic
-    listen 443 ssl;
+    # Listen on port 8443 for HTTPS traffic
+    listen 8443 ssl;
     
     # IMPORTANT: Replace 'your_server_ip_or_domain' with your server's public IP address or domain name.
     server_name 8.34.125.71;
