--- a/deploy/deploy.conf
+++ b/deploy/deploy.conf
@@ -2,6 +2,11 @@
 
 # --- Shared Deployment Configuration ---
 
+# Set the version for the Docker image tag.
+# For fast iterative builds, keep this as a static, PEP 440 compliant dev version.
+# For a release, you can temporarily set it to a git hash, e.g., VERSION=$(git rev-parse --short HEAD)
+VERSION="0.0.0.dev"
+
 # Define the specific GPUs to use for deployment
 GPUS_TO_USE=(0)
 
@@ -9,17 +14,17 @@ GPUS_TO_USE=(0)
 INSTANCES_PER_GPU=2
 
 # Define the starting port for host-to-container port mapping
-BASE_PORT=52000
+BASE_PORT=51001
 
 # Define the name of the Docker image to be used
 IMAGE_NAME="19pine/vllm-agent-asr"
 
 # --- Model Configuration ---
 # Define the base directory on the HOST machine where all checkpoints are stored.
-HOST_CHECKPOINTS_DIR="/home/weiguo/workspace/checkpoints"
+HOST_CHECKPOINTS_DIR="/home/weiguo/workspace/checkpoints/AgentASR-V2"
 
 # Define the specific model directory name to use for this deployment.
-MODEL_NAME="checkpoint-AgentASR-V2-200000-merged"
+MODEL_NAME="checkpoint-600000-merged"
 
 # Define the path where the model will be mounted INSIDE the container.
 # It's good practice to use a generic path like /models.
