--- a/deploy/deploy.conf
+++ b/deploy/deploy.conf
@@ -8,23 +8,27 @@
 VERSION="0.0.0.dev"
 
 # Define the specific GPUs to use for deployment
-GPUS_TO_USE=(0)
+GPUS_TO_USE_STAGING=(0)
+GPUS_TO_USE_PROD=(1 2 3)
 
 # Define how many container instances to run on EACH GPU
-INSTANCES_PER_GPU=2
+INSTANCES_PER_GPU_STAGING=1
+INSTANCES_PER_GPU_PROD=2
 
 # Define the starting port for host-to-container port mapping
-BASE_PORT=51001
+BASE_PORT_STAGING=51001
+BASE_PORT_PROD=50101
 
 # Define the name of the Docker image to be used
 IMAGE_NAME="19pine/vllm-agent-asr"
 
 # --- Model Configuration ---
 # Define the base directory on the HOST machine where all checkpoints are stored.
-HOST_CHECKPOINTS_DIR="/home/weiguo/workspace/checkpoints/AgentASR-V2"
+#HOST_CHECKPOINTS_DIR="/home/weiguo/workspace/checkpoints/AgentASR-V2"
+HOST_CHECKPOINTS_DIR="/home/weiguo/workspace/checkpoints/AgentASR-V2.1"
 
 # Define the specific model directory name to use for this deployment.
-MODEL_NAME="checkpoint-600000-merged"
+MODEL_NAME="checkpoint-7200-merged"
 
 # Define the path where the model will be mounted INSIDE the container.
 # It's good practice to use a generic path like /models.
