--- a/deploy/deploy.conf
+++ b/deploy/deploy.conf
@@ -9,7 +9,7 @@ VERSION="0.0.0.dev"
 
 # Define the specific GPUs to use for deployment
 GPUS_TO_USE_STAGING=(0)
-GPUS_TO_USE_PROD=(1 2 3)
+GPUS_TO_USE_PROD=(1)
 
 # Define how many container instances to run on EACH GPU
 INSTANCES_PER_GPU_STAGING=1
@@ -17,7 +17,7 @@ INSTANCES_PER_GPU_PROD=2
 
 # Define the starting port for host-to-container port mapping
 BASE_PORT_STAGING=51001
-BASE_PORT_PROD=50101
+BASE_PORT_PROD=50102
 
 # Define the name of the Docker image to be used
 IMAGE_NAME="19pine/vllm-agent-asr"
