--- a/deploy/deploy.conf
+++ b/deploy/deploy.conf
@@ -22,17 +22,19 @@ BASE_PORT_PROD=50105
 # Define the name of the Docker image to be used
 IMAGE_NAME="19pine/vllm-agent-asr"
 
-# --- Model Configuration ---
-# Define the base directory on the HOST machine where all checkpoints are stored.
-#HOST_CHECKPOINTS_DIR="/home/weiguo/workspace/checkpoints/AgentASR-V2"
-HOST_CHECKPOINTS_DIR="/home/weiguo/workspace/checkpoints/AgentASR-V2.1"
-
 # Define the specific model directory name to use for this deployment.
-MODEL_NAME="checkpoint-7200-merged"
+# This can be a HuggingFace model ID (e.g., "19pine/agentasr") or a local path.
+MODEL_PATH="19pine/agentasr"
 
-# Define the path where the model will be mounted INSIDE the container.
-# It's good practice to use a generic path like /models.
-CONTAINER_MODEL_PATH="/models"
+# HuggingFace Token for accessing private models (optional for public models)
+# IMPORTANT: DO NOT hardcode the token here! Use environment variable instead:
+#   - For manual deployment: export HF_TOKEN=your_token
+#   - For CI/CD: Set HF_TOKEN in GitHub Secrets
+HF_TOKEN="${HF_TOKEN:-}"
+
+# HuggingFace cache directory on the host machine
+# This directory will be mounted into the containers to avoid repeated downloads
+HF_CACHE_DIR="${HOME}/.cache/huggingface"
 
 # Define the filename of the audio file to be used by the warmup script.
 # This file should be located in the same directory as the scripts (deploy/).
