--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -56,8 +56,10 @@ RUN python3 -m pip install . --no-build-isolation
 # [FIX] Manually move the compiled C++/CUDA extensions from the temporary
 # build directory to the final vllm package directory. This ensures that the
 # Python interpreter can find them at runtime.
-#RUN find /app/build -name "*.so" -exec mv {} /app/vllm/ \;
-RUN find /app/build -name "*.so" -exec cp {} /app/vllm/ \;
+RUN find /app/build -name "*.so" -exec mv {} /app/vllm/ \;
+RUN mkdir -p /app/vllm/vllm_flash_attn && \
+    find /app/vllm -maxdepth 1 -name "_vllm_fa*_C*.so" -exec cp {} /app/vllm/vllm_flash_attn/ \; || true
+
 
 RUN python3 -m pip install -U nvidia-nccl-cu12
 RUN python3 -m pip install flashinfer-python
