--- a/deploy/deploy.conf
+++ b/deploy/deploy.conf
@@ -9,7 +9,7 @@ VERSION="0.0.0.dev"
 
 # Define the specific GPUs to use for deployment
 GPUS_TO_USE_STAGING=(0)
-GPUS_TO_USE_PROD=(1 2 3 4)
+GPUS_TO_USE_PROD=(1 2 3 4 5 6 7)
 
 # Define how many container instances to run on EACH GPU
 INSTANCES_PER_GPU_STAGING=1
