feat: update model checkpoint to agentasr-v2.3-12400

--- a/deploy/deploy.conf
+++ b/deploy/deploy.conf
@@ -24,7 +24,7 @@ IMAGE_NAME="19pine/vllm-agent-asr"
 
 # Define the specific model directory name to use for this deployment.
 # This can be a HuggingFace model ID (e.g., "19pine/agentasr") or a local path.
-MODEL_PATH="19pine/agentasr"
+MODEL_PATH="19pine/agentasr-v2.3-12400"
 
 # HuggingFace Token for accessing private models (optional for public models)
 # IMPORTANT: DO NOT hardcode the token here! Use environment variable instead:
