update docker build

--- a/deploy/deploy.conf
+++ b/deploy/deploy.conf
@@ -2,10 +2,14 @@
 
 # --- Shared Deployment Configuration ---
 
-# Set the version for the Docker image tag.
-# Default: use git commit hash (so each commit gets a new version)
-# Override: VERSION=v1.0.0 ./deploy/docker-build.sh
-VERSION="${VERSION:-$(git rev-parse --short HEAD 2>/dev/null || echo '0.0.0.dev')}"
+# VERSION: Used for Python package version (must be PEP 440 compliant)
+# Keep this fixed for builds
+VERSION="0.0.0.dev"
+
+# IMAGE_TAG: Used for Docker image tag (can use git hash)
+# Default: git short hash, so each commit gets a unique image tag
+# Override: IMAGE_TAG=v1.0.0 ./deploy/docker-build.sh
+IMAGE_TAG="${IMAGE_TAG:-$(git rev-parse --short HEAD 2>/dev/null || echo 'latest')}"
 
 # Define the specific GPUs to use for deployment
 GPUS_TO_USE_STAGING=(0)
