feat: add custom modeling_qwen2_audio.py with remove_padding optimization
- Add custom modeling_qwen2_audio.py for encoder optimization
- Update Dockerfile to replace transformers' default model with custom version
- Enable remove_padding feature to trim padded timesteps for batch_size==1

--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -74,6 +74,10 @@ RUN python3 -m pip install torchcodec
 # Changes to these files will only invalidate the cache from this point onwards.
 COPY . .
 
+# Replace the default modeling_qwen2_audio.py with our custom version
+RUN cp /app/modeling_qwen2_audio.py \
+    $(python3 -c "import transformers; print(transformers.__path__[0])")/models/qwen2_audio/modeling_qwen2_audio.py
+
 # --- STAGE 3: Final configuration ---
 # Expose the application port
 EXPOSE 50002
